# splicefeed

./: CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  THIRD-PARTY-LICENSES.md  about.hbs  about.toml  config.example.toml  justfile
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: config.rs  domain.rs  download.rs  ipc.rs  lib.rs  opml.rs  retention.rs  rss.rs  storage.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: control.rs  lib.rs  main.rs  ops.rs  reload.rs  report.rs  scheduler.rs  server.rs  telemetry.rs  tui.rs
crates/daemon/tests/: control.rs  reload.rs  scheduler.rs  server.rs  telemetry.rs
crates/providers/: Cargo.toml
crates/providers/src/: difm.rs  lib.rs  quarantine.rs
crates/providers/src/difm/: v1.rs
crates/providers/tests/: difm_api.rs
crates/providers/tests/fixtures/audioaddict/: episode_162_unauth.json  episodes_page1.json  show.json
crates/splicefeed/: Cargo.toml
crates/splicefeed/examples/: sync_once.rs
crates/splicefeed/src/: lib.rs
crates/splicefeed/tests/: sync.rs
packaging/: Containerfile  io.splicefeed.daemon.plist  splicefeed.container  splicefeed.service
