[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/providers",
    "crates/splicefeed",
    "crates/daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# internal
splicefeed-core = { path = "crates/core" }
splicefeed-providers = { path = "crates/providers" }
splicefeed = { path = "crates/splicefeed" }

# shared external (see DESIGN.md "Decisions" for rationale)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
secrecy = "0.10"
figment = { version = "0.10", features = ["toml"] }
humantime-serde = "1"
url = { version = "2", features = ["serde"] }
jiff = "0.2"
etcetera = "0.8"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }

[profile.release]
lto = "thin"
strip = "symbols"
