[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/providers",
    "crates/splicefeed",
    "crates/daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/ajf/splicefeed"
authors = ["Andrew Forgue <andrew@forgue.io>"]

[workspace.dependencies]
# internal
splicefeed-core = { path = "crates/core" }
splicefeed-providers = { path = "crates/providers" }
splicefeed = { path = "crates/splicefeed" }

# shared external (see DESIGN.md "Decisions" for rationale)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
secrecy = "0.10"
figment = { version = "0.10", features = ["toml"] }
humantime-serde = "1"
url = { version = "2", features = ["serde"] }
jiff = { version = "0.2", features = ["serde"] }
humansize = "2"
humantime = "2"
colored = "3"
quick-xml = "0.41"
axum = "0.8"
tower-http = { version = "0.7", features = ["fs"] }
feed-rs = "2"
ratatui = "0.30"
fastrand = "2"
# Telemetry: API/SDK/bridges pinned to one minor — the prometheus bridge
# historically lagged the SDK (DESIGN.md "Decisions"); at 0.32 they align.
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["metrics", "rt-tokio"] }
opentelemetry-prometheus = "0.32"
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["metrics", "http-proto", "reqwest-client"] }
prometheus = "0.14"
etcetera = "0.8"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "signal", "time"] }
rusqlite = { version = "0.39", features = ["bundled"] }
blake3 = "1"
tempfile = "3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
backon = "1"
lofty = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
# `string` lets the manpage generator rename subcommands with owned
# strings ("splicefeed-run" etc.).
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"
clap_mangen = "0.3"

[profile.release]
lto = "thin"
strip = "symbols"
