[package]
name = "splicefeed-daemon"
version.workspace = true
edition.workspace = true
description = "splicefeed daemon: HTTP server, unix-socket control, status TUI, CLI"

[[bin]]
name = "splicefeed"
path = "src/main.rs"

[dependencies]
splicefeed.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
jiff.workspace = true
futures-util.workspace = true
humansize.workspace = true
humantime.workspace = true
