[package]
name = "splicefeed-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "splicefeed daemon: HTTP server, unix-socket control, status TUI, CLI"

[[bin]]
name = "splicefeed"
path = "src/main.rs"

[dependencies]
splicefeed.workspace = true
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
jiff.workspace = true
futures-util.workspace = true
humansize.workspace = true
humantime.workspace = true
colored.workspace = true
axum.workspace = true
tower-http.workspace = true
ratatui.workspace = true
fastrand.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-prometheus.workspace = true
opentelemetry-otlp.workspace = true
prometheus.workspace = true

[dev-dependencies]
reqwest.workspace = true
tempfile.workspace = true
wiremock.workspace = true
feed-rs.workspace = true
