[package]
name = "splicefeed-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Provider trait, registry, and the DI.FM/AudioAddict implementation for splicefeed"

[dependencies]
splicefeed-core.workspace = true
async-trait.workspace = true
thiserror.workspace = true
url.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
jiff.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true
