[package]
name = "splicefeed"
version.workspace = true
edition.workspace = true
description = "Turn DI.FM premium radio shows into podcast RSS feeds — embeddable library"

[dependencies]
splicefeed-core.workspace = true
splicefeed-providers.workspace = true
thiserror.workspace = true
serde.workspace = true
url.workspace = true
blake3.workspace = true
futures-util.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
feed-rs.workspace = true
wiremock.workspace = true
tempfile.workspace = true
serde_json.workspace = true

[[example]]
name = "sync_once"
